--- a/api/src/templates/box_final_warning.body.html
+++ b/api/src/templates/box_final_warning.body.html
@@ -16,9 +16,9 @@
   </ul>
 </p>
 <p>
-  Om du anser att detta inte stämmer, hör av dig till <a href="mailto: info@makerspace.se">info@makerspace.se</a></br>
-  Med vänliga hälsningar,</br>
-  Stockholm Makerspace</br>
+  Om du anser att detta inte stämmer, hör av dig till <a href="mailto: info@makerspace.se">info@makerspace.se</a><br/>
+  Med vänliga hälsningar,<br/>
+  Stockholm Makerspace<br/>
 </p>
 {% endblock %}
 
@@ -37,8 +37,8 @@
   </ul>
 </p>
 <p>
-  If you feel that this is not the case, please contact <a href="mailto: info@makerspace.se">info@makerspace.se</a> as soon as possible.</br>
-  Sincerely,</br>
-  Stockholm Makerpace</br>
+  If you feel that this is not the case, please contact <a href="mailto: info@makerspace.se">info@makerspace.se</a> as soon as possible.<br/>
+  Sincerely,<br/>
+  Stockholm Makerpace<br/>
 </p>
 {% endblock %}
