--- a/api/src/templates/box_terminated.body.html
+++ b/api/src/templates/box_terminated.body.html
@@ -9,9 +9,9 @@
   dess innehåll nu tillfallit föreningen i enlighet med gällande labbmedlemsavtal.
 </p>
 <p>
-  Om du anser att detta inte stämmer, hör av dig till <a href="mailto: info@makerspace.se">info@makerspace.se</a></br>
-  Med vänliga hälsningar,</br>
-  Stockholm Makerspace</br>
+  Om du anser att detta inte stämmer, hör av dig till <a href="mailto: info@makerspace.se">info@makerspace.se</a><br/>
+  Med vänliga hälsningar,<br/>
+  Stockholm Makerspace<br/>
 </p>
 {% endblock %}
 
@@ -23,8 +23,8 @@
   contents now belong to the Stockholm Makerspace according to the lab membership agreement.
 </p>
 <p>
-  If you feel that this is not the case, please contact <a href="mailto: info@makerspace.se">info@makerspace.se</a> as soon as possible.</br>
-  Sincerely,</br>
-  Stockholm Makerpace</br>
+  If you feel that this is not the case, please contact <a href="mailto: info@makerspace.se">info@makerspace.se</a> as soon as possible.<br/>
+  Sincerely,<br/>
+  Stockholm Makerpace<br/>
 </p>
 {% endblock %}
