--- a/public/src/templates/cart.html
+++ b/public/src/templates/cart.html
@@ -31,28 +31,7 @@
                                 </button>
                             </form>
                         </div>
-                        <form id="pay">
-                            <h3>Betala med kort via Stripe</h3>
-                            <form action="/charge" method="post" id="payment-form">
-                                <div class="form-row">
-                                    {# <label for="card-element">
-                                      Credit or debit card
-                                    </label> #}
-                                    <div id="card-element">
-                                      <!-- A Stripe Element will be inserted here. -->
-                                    </div>
-
-                                    <!-- Used to display form errors. -->
-                                    <div id="card-errors" role="alert"></div>
-                                </div>
-
-                                <button type="submit" id="pay-button" class="uk-button uk-button-default uk-button-primary">
-                                    <div class="progress-spinner" uk-spinner></div>
-                                    <span>Betala<span id='cart-sum'></span></span>
-                                </button>
-                                </form>
-                            </form>
-                        </form>
+                        {% include 'payment_form.html' %}
                     </div>
                 </div>
             </div>
