--- a/public/src/templates/register.html
+++ b/public/src/templates/register.html
@@ -69,21 +69,7 @@
             <p><strong>Vi tillåter inte kommersiellt bruk av lokalerna!</strong></p>
             <p>Du kan istället välja att köpa endast årsmedlemsskap i föreningen. Labaccess kan köpas separat i <a href="/shop">webshoppen</a>. Detta är något dyrare än paketpriset.</p>
 
-            <div class="form-row">
-                <div id="card-element">
-                  <!-- A Stripe Element will be inserted here. -->
-                </div>
-
-                <!-- Used to display form errors. -->
-                <div id="card-errors" role="alert"></div>
-            </div>
-
-            <button type="button" id="pay-button" class="uk-button uk-button-default uk-button-primary" disabled>
-                <div class="progress-spinner" uk-spinner></div>
-                <span>Betala / Pay</span>
-            </button>
-
-            </form>
+            {% include 'payment_form.html' %}
         </form>
     </body>
 </html>
