Improve payment failed feedback

--- a/public/scss/style.scss
+++ b/public/scss/style.scss
@@ -511,7 +511,9 @@ html, body {
 }
 
 #card-errors {
-	font-size: 10pt;
+	font-size: 14pt;
+	color: #D61;
+	font-weight: bold;
 	margin-left: 10px;
 	margin-top: 5px;
 }
