--- a/public/src/templates/meta.html
+++ b/public/src/templates/meta.html
@@ -2,4 +2,5 @@
 <script>
     window.stripeKey = "{{ meta.stripe_public_key }}";
     window.apiBasePath = "{{ meta.api_base_url }}";
+    window.staticBasePath = "{{ STATIC }}";
 </script>
