--- a/api/src/templates/quiz_first_oldmember.body.html
+++ b/api/src/templates/quiz_first_oldmember.body.html
@@ -8,10 +8,10 @@
 <p>Hello {{member.firstname}}. You have been a member for a while now and we hope that you have had time to work on many fun projects at the makerspace.</p>
 <p>We have recently introduced a new quiz as a learning tool which all members must take. It will go through many common questions that members have.
  Since you have been a member for a while it might all be super easy, but there may be some nuggets of information there which you didn't know about.</p>
-<p>Note that this is not intended as test of your knowledge, it is a way for members to learn how things work without having to read through a long and boring document.
+<p>Note that this is not intended as a test of your knowledge, it is a way for members to learn how things work without having to read through a long and boring document.
 Completing this quiz is a mandatory part of being a member. You will receive nagging emails every few days or so until you complete the quiz.
 </p>
-<p>The quiz only take a few minutes, just click on the link below to get started.</p>
+<p>The quiz only takes a few minutes, just click on the link below to get started.</p>
 
 <a href="{{ url }}" style="display: block; width: 200px; text-decoration: none; color: #FFF; font-size: 16pt; border-radius: 10px; background: rgb(0, 168, 230); padding: 10px; text-align: center;">Start learning</a>
 
