Add license page

--- a/public/src/templates/sidebar.html
+++ b/public/src/templates/sidebar.html
@@ -30,6 +30,9 @@
                 {% call nav_item("history", active_item) %}
                     <a href="/shop/member/history"><span uk-icon="history"></span> Min köphistorik</a>
                 {% endcall %}
+                {% call nav_item("history", active_item) %}
+                    <a href="/shop/member/licenses"><span uk-icon="tag"></span> Licenser och rabatter</a>
+                {% endcall %}
                 <li>
                     <a href="#" id="logout"><span uk-icon="sign-out"></span> Logga ut</a>
                 </li>
