--- a/public/src/templates/cart.html
+++ b/public/src/templates/cart.html
@@ -14,6 +14,7 @@
         <script src='{{ STATIC }}/js/cartpage.js'></script>
     </head>
     <body>
+        {% include 'banner.html' %}
         <div id="root">
             {{ sidebar("cart") }}
             <div id="content" class="cartpage">
