--- a/public/src/templates/history.html
+++ b/public/src/templates/history.html
@@ -13,6 +13,7 @@
         <script src='{{ STATIC }}/js/history.js'></script>
     </head>
     <body>
+        {% include 'banner.html' %}
         <div id="root">
             {{ sidebar("history") }}
             <div id="content" class="purchase-history">
