--- a/public/src/templates/licenses.html
+++ b/public/src/templates/licenses.html
@@ -13,6 +13,7 @@
         <script src="{{ STATIC }}/js/licenses.js"></script>
     </head>
     <body>
+        {% include 'banner.html' %}
         <div id="root">
             {{ sidebar("licenses") }}
             <div id="content">
