--- a/public/src/templates/member.html
+++ b/public/src/templates/member.html
@@ -13,6 +13,7 @@
         <script src="{{ STATIC }}/js/member.js"></script>
     </head>
     <body>
+        {% include 'banner.html' %}
         <div id="root">
             {{ sidebar("member") }}
             <div id="content">
