--- a/public/src/templates/receipt.html
+++ b/public/src/templates/receipt.html
@@ -16,6 +16,7 @@
         <script src='{{ STATIC }}/js/receipt.js'></script>
     </head>
     <body>
+        {% include 'banner.html' %}
         <div id="root">
             {{ sidebar("") }}
             <div id="content" class="receipt">
