--- a/public/src/templates/register.html
+++ b/public/src/templates/register.html
@@ -13,6 +13,7 @@
         <script src='{{ STATIC }}/js/register.js'></script>
     </head>
     <body>
+        {% include 'banner.html' %}
         <form class="product-edit-form uk-form-stacked uk-margin-xlarge-bottom">
             <div class="header-logo">
                 <img src='{{ STATIC }}/images/logo-transparent-500px-300x210.png' />
