--- a/public/src/templates/shop.html
+++ b/public/src/templates/shop.html
@@ -13,6 +13,7 @@
         <script src='{{ STATIC }}/js/shop.js'></script>
     </head>
     <body>
+        {% include 'banner.html' %}
         <div id="root">
             {{ sidebar("shop") }}
             <div id="content">
