--- a/public/scss/style.scss
+++ b/public/scss/style.scss
@@ -1365,7 +1365,12 @@ $palette-red: $palette4;
 	padding: 20px;
 	color: white;
 	text-align: center;
-	/* box-shadow: 0px 0px 10px rgba(0,0,0,0.4); */
+    /* box-shadow: 0px 0px 10px rgba(0,0,0,0.4); */
+    
+    a {
+        color: white;
+        text-decoration: underline;
+    }
 }
 
 .sidebar-banner-adjust {
