--- a/public/src/templates/sidebar.html
+++ b/public/src/templates/sidebar.html
@@ -33,6 +33,9 @@
                 {% call nav_item("history", active_item) %}
                     <a href="/shop/member/licenses"><span uk-icon="tag"></span> Licenser och rabatter</a>
                 {% endcall %}
+                {% call nav_item("payments", active_item) %}
+                    <a href="/shop/member/payments"><span uk-icon="tag"></span> Ekonomi</a>
+                {% endcall %}
                 <li>
                     <a href="#" id="logout"><span uk-icon="sign-out"></span> Logga ut</a>
                 </li>
