Add support for multiple quizes

--- a/public/scss/style.scss
+++ b/public/scss/style.scss
@@ -43,7 +43,7 @@ body {
         box-shadow: rgba(0, 0, 0, 0.1) 0px 0px 10px 0px;
 
         .sidebar-fixed-content {
-            width: 250px - 10px/2;
+            width: 250px - 5px;
             position: fixed;
             top: 0px;
             bottom: 0px;
