--- a/public/scss/style.scss
+++ b/public/scss/style.scss
@@ -1146,8 +1146,33 @@ $palette-red: $palette4;
     box-shadow: 0px 0px 3px 0px rgba(0, 0, 0, 0.2);
     border-radius: 10px;
     padding: 50px;
+
+    @media screen and (max-width: 900px) {
+        padding: 20px;
+    }
+
     justify-content: start;
     flex-direction: column;
+
+    .quiz-embed {
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        margin-top: 15px;
+        margin-bottom: 15px;
+
+        iframe {
+            max-width: 100%;
+        }
+    }
+
+    a {
+        color: #d45277;
+    }
+
+    .uk-button {
+        color: white
+    }
 
     &.quiz-complete {
         background-color: $palette5;
