Add courses page with all quizzes

--- a/public/src/templates/sidebar.html
+++ b/public/src/templates/sidebar.html
@@ -30,6 +30,9 @@
                 {% call nav_item("history", active_item) %}
                     <a href="/shop/member/history"><span uk-icon="history"></span> Min köphistorik</a>
                 {% endcall %}
+                {% call nav_item("courses", active_item) %}
+                    <a href="/shop/member/courses"><span uk-icon="star"></span> Kurser</a>
+                {% endcall %}
                 {% call nav_item("history", active_item) %}
                     <a href="/shop/member/licenses"><span uk-icon="tag"></span> Licenser och rabatter</a>
                 {% endcall %}
