Fix sidebar menu highlights

--- a/public/scss/style.scss
+++ b/public/scss/style.scss
@@ -61,6 +61,10 @@ body {
                 max-width: 250px;
             }
         }
+
+        li a {
+            justify-content: center;
+        }
     }
 
     // Required for the delete button to be placed on the same row as the category
@@ -81,6 +85,20 @@ body {
         a {
             color: #FFF;
         }
+    }
+
+    li.active > a {
+        color: #444 !important;
+    }
+
+    li a {
+        .uk-icon {
+            margin-right: 10px;
+        }
+
+        display: flex;
+        flex-direction: row;
+        align-items: center;
     }
 
     .sidebar-buy-btn.cart-empty {
