Added email templates for temporary storage

--- a/api/src/templates/storage/temp_storage_warning_lab.body.html
+++ b/api/src/templates/storage/temp_storage_warning_lab.body.html
@@ -5,14 +5,18 @@
 <p>(See below for English).</p>
 <p>
   Ditt labbmedlemskap i Stockholm Makerspace gick ut den {{labaccess_end_date}}, om {{to_termination_days}} dagar kommer
-  lådan och dess innehåll att tillfalla föreningen i enlighet med gällande labbmedlemsavtal. Enligt det har du
-  {{expiration_time}} dagar på dig efter att labbmedlemskapet löpt ut att hämta din labblåda.
+  din temporära förvaring och dess innehåll att tillfalla föreningen i enlighet med gällande labbmedlemsavtal. Enligt det har du
+  {{expiration_time}} dagar på dig efter att labbmedlemskapet löpt ut att hämta din temporära förvaring.
+  Den här specifika temporära förvaringen har beskrivningen:
+</p>
+<p>
+  {{description}}
 </p>
 <p>
   Du har nu följande två alternativ:
   <ul>
     <li>Förnya ditt labbmedlemskap i <a href="https://medlem.makerspace.se/shop">webshoppen</a>.</li>
-    <li>Hämta din labblåda och eventuell temporär förvaring.</li>
+    <li>Hämta din temporära förvaring och eventuell labblåda.</li>
   </ul>
 </p>
 <p>
@@ -26,15 +30,19 @@
 <h2>Hi {{member.firstname}}</h2>
 <p>
   Your lab membership in Stockholm Makerspace expired on {{labaccess_end_date}}, in {{to_termination_days}}
-  days, your lab storage box and its contents will belong to the Stockholm Makerspace in accordance with the lab
+  days, your temporary storage and its contents will belong to the Stockholm Makerspace in accordance with the lab
   membership agreement. According to the agreement, you have {{expiration_time}} days after your lab membership expires to retrieve
-  your lab storage box.
+  your temporary storage.
+  The specific temporary storage has the description:
+</p>
+<p>
+  {{description}}
 </p>
 <p>
   You now have the following two options:
   <ul>
     <li>Renew your lab membership in our <a href="https://medlem.makerspace.se/shop">webshoppen</a>.</li>
-    <li>Retrieve your lab storage box and any of your other temporary storage.</li>
+    <li>Retrieve your temporary storage and any lab storage box.</li>
   </ul>
 </p>
 <p>
