Membership reminder is login link.

--- a/api/src/templates/membership_reminder.body.html
+++ b/api/src/templates/membership_reminder.body.html
@@ -6,7 +6,7 @@
     <p>
         Om du vill fortsätta vara medlem i Stockholms största kollektiva verkstad efter {{ expiration_date }}
         så är det dags att förnya ditt årsmedlemskap i vår
-        <a href="{{ public_url('/shop') }}">webshop</a>.
+        <a href="{{ url }}">webshop</a>.
     </p>
     <p>
         Årsmedlemskapet låter dig vara med på kurser och årsmötet och krävs även för att du ska kunna förnya ditt labbmedlemskap.
@@ -22,7 +22,7 @@
     <p>
         If you want to continue to be a member in Stockholm's largest collective workshop after
         {{ expiration_date }}, it is time to renew your membership in our
-        <a href="{{ public_url('/shop') }}">webshop</a>.
+        <a href="{{ url }}">webshop</a>.
     </p>
     <p>
         The yearly membership lets you attend courses and the annual meeting and it is a prerequisite for being able to purchase lab membership.
