--- a/public/src/templates/change_phone.html
+++ b/public/src/templates/change_phone.html
@@ -16,7 +16,7 @@
     {% include 'banner.html' %}
     <div id="root">
       {{ sidebar("member") }}
-      <div id="content">
+      <div id="content" style="flex-direction: column; flex: none;">
       </div>
     </div>
   </body>
