--- a/public/scss/style.scss
+++ b/public/scss/style.scss
@@ -895,6 +895,13 @@ form input.readonly-input {
     }
 
     color: white;
+    #images {
+        background: white;
+
+        img {
+            width: 100%;
+        }
+    }
 
     a {
         color: white;
