Update "hungry" section after we lost access to the AWL kitchen.

--- a/api/src/templates/new_member.body.html
+++ b/api/src/templates/new_member.body.html
@@ -67,7 +67,7 @@
 <p>Du måste städa efter dig. Vi har en städare som vi betalar en ansenlig summa för att våttorka golv och bord varje vecka. Men han rör inte bord med saker på, och städar inte golv där det står saker. Det är jätteviktigt att du städar undan efter dig, så att vi kan ha en gemensam, ren lokal. Har du råkat lämna saker på ett bord så kan det ha slängts eller flyttats till en Lost&Found-låda. Medlemmar hjälps åt att tömma soporna. Fråga en medlem om du inte vet hur man gör, eller kolla in <a href="https://wiki.makerspace.se/St%C3%A4drutiner">städrutinerna</a>.</p>
 
 <h3>Jag är hungrig.</h3>
-<p>Du har access till köket i entréplan under kontorstid. Där finns mikrovågsugnar och kylskåp med mat till försäljning. I workshoprummet har vi ett pentry som går att använda dygnet runt. Vi får låna köket av vår hyresvärd THINGS så länge som vi håller det i perfekt skick, så vänligen plocka ur färdiga diskmaskiner, ställ in smutsig disk, torka av ytor och håll det rent och fint.</p>
+<p>Stockholm Makerspace erbjuder ett pentry med en kaffekokare, mikrovågsugn och en liten kyl som du kan förvara din matlåda i. Du kan t ex köpa färdigmat på The Coffice över gatan, eller på 7-Eleven eller T-Snabben nere vid Östra Station.</p>
 
 <h3>Hur funkar styrelsen?</h3>
 <p>Styrelsen arbetar ideellt och möts ungefär 1 gång i månaden. Då går man igenom ekonomi, kommande nyckelutlämnings-datum, eventuella problem och tar beslut kring större inköp. Om du vill kontakta styrelsen så emaila <a href="mailto:info@makerspace.se">info@makerspace.se</a>.</p>
@@ -151,7 +151,7 @@
 <p>You have to clean up after yourself. We have a cleaning service that we pay a considerable amount to mop floors and tables every week. But the cleaner does not touch tables with things on them, and does not clean floors where things are. It is very important that you clean up after yourself, so that we all can have a common, clean room. If you happened to leave things on a table, it might have been thrown away or moved to a Lost & Found box. Members help to empty the garbage. Ask a member if you don't know how to do it, or check out the <a href="https://wiki.makerspace.se/St%C3%A4drutiner">cleaning routines ("städrutinerna")</a>.</p>
 
 <h3>I'm hungry.</h3>
-<p>You have access to the kitchen on the entry level floor during office hours. There are microwaves and refrigerators with food for sale. In the workshop-room we have a small kitchenette available at all times. Note that we can borrow the kitchen from our landlord, THINGS, as long as leave the space neat and tidy, and regularly fill and empty the dishwashers.</p>
+<p>Stockholm Makerspace is offering a kitchenette with a microwave oven and a small fridge, where you can store and heat food. You can buy food, for example, across the street at The Coffice, or 7-Eleven or T-Snabben near the station.</p>
 
 <h3>How does the Board work?</h3>
 <p>All Board members are volunteers and we meet about once per month. At the board meetings we discuss the financials, upcoming key tag nights ("nyckelutlämning"), any problems, and decide on larger purchases. If you want to contact the Board, email <a href="mailto:info@makerspace.se">info@makerspace.se</a>.</p>
