Added test for checkout to stripe

--- a/public/src/templates/payment_form.html
+++ b/public/src/templates/payment_form.html
@@ -17,5 +17,8 @@
             <div class="progress-spinner" uk-spinner></div>
             <span>Betala / Pay<span id='cart-sum'></span></span>
         </button>
+        <div>
+            <button type="button" id="checkout-button">Checkout</button>
+        </div>
     </div>
 </form>
