Add retention graph to statistics page.

--- a/public/scss/style.scss
+++ b/public/scss/style.scss
@@ -1453,3 +1453,9 @@ $palette-red: $palette4;
         }
     }
 }
+
+.statistics-page {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
