--- a/public/src/templates/statistics.html
+++ b/public/src/templates/statistics.html
@@ -18,7 +18,7 @@
         <script src='{{ STATIC }}/js/statistics.js'></script>
     </head>
     <body>
-        <div id="single-page-content">
+        <div id="single-page-content" class="statistics-page">
             <h1>Statistik för Stockholm Makerspace</h1>
         </div>
     </body>
